Fixed bug 15684 and removed PMD errors.
SVN-Revision: 23989